// Copyright 2024 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.internal.kingdom;

import "wfa/measurement/internal/kingdom/duchy_protocol_config.proto";
import "wfa/measurement/internal/kingdom/measurement_failure.proto";
import "wfa/measurement/internal/kingdom/protocol_config.proto";

option java_package = "org.wfanet.measurement.internal.kingdom";
option java_multiple_files = true;

message MeasurementDetails {
  // Version the public API for serialized message definitions.
  string api_version = 1;

  // Serialized `MeasurementSpec` from public API.
  bytes measurement_spec = 2;
  bytes measurement_spec_signature = 3;
  string measurement_spec_signature_algorithm_oid = 9;

  // The protocol config used in this measurement.
  ProtocolConfig protocol_config = 6;
  DuchyProtocolConfig duchy_protocol_config = 7;

  // Set when the state is set to FAILED.
  MeasurementFailure failure = 8;
}
